# cmake-opengl-template2

./: README.md
testproject/: CMakeLists.txt  notes.txt
testproject/include/Application/: application.h
testproject/include/Engine/: engine.h  gui.h  input.h  shapes.h  window.h
testproject/include/Engine/window/: window.h
testproject/resources/shaders/: default.frag
testproject/src/: main.cpp
testproject/src/Application/: application.cpp  input.cpp
testproject/src/Engine/: gui.cpp  shapes.cpp  window.cpp
testproject/src/Engine/window/: window.cpp
